Fix codemirror styling to let it prune non-visible lines: big perf boost on many-lined files

--- a/css/site.css
+++ b/css/site.css
@@ -72,7 +72,12 @@ a:hover {
 }
 
 .right .CodeMirror {
-    height:100%;
+    position:absolute;
+    bottom:0;
+    right:0;
+    left:0;
+    top:41px;
+    height:auto !important;
     background:#363636;
     font-family: 'Droid Sans Mono', sans-serif;
     line-height:1.5em;
@@ -81,6 +86,7 @@ a:hover {
 .right .pane {
     position:absolute;
     top:0;
+    bottom:0;
     width:100%;
     display:none;
 }
@@ -101,7 +107,7 @@ a:hover {
     right: 0;
     top: 41px;
     bottom: 0;
-    overflow: auto;
+    overflow: hidden;
     background: #000;
     z-index: 999;
 }
